feat: remove tinysubscribe

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "preact-ob",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "umd/index.js",
   "types": "umd/index.d.ts",
   "private": false,
@@ -21,8 +21,5 @@
   "bugs": {
     "url": "git+https://github.com/ymzuiku/react-ob.git"
   },
-  "homepage": "git+https://github.com/ymzuiku/react-ob.git",
-  "dependencies": {
-    "tiny-subject": "^1.1.0"
-  }
+  "homepage": "git+https://github.com/ymzuiku/react-ob.git"
 }
